--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -210,7 +210,7 @@ necesita una red disponible."</string>
   <string name="hour_1"></string>
   <string name="in">En </string>
   <string name="incoming_call_notify">Llamada Entrante</string>
-  <string name="incoming_call_notify_tips">Avíseme si pierdo una llamada entrante en %s segundos.</string>
+  <string name="incoming_call_notify_tips">Avisar si tengo una llamada en %s segundos.</string>
   <string name="input_precise_person_info">Por favor, introduzca su información personal. Más detalles pueden ayudarnos a obtener resultados más precisos.</string>
   <string name="instruction_tip_1">"Observe 
 \u0009el progreso de su entrenamiento"</string>
@@ -293,7 +293,7 @@ necesita una red disponible."</string>
   <string name="lab_factory_sport_type_others">Otros</string>
   <string name="lab_factory_sport_type_pingpong">Ping Pong</string>
   <string name="lab_factory_sport_type_riding">Equitación</string>
-  <string name="lab_factory_sport_type_ropeskipping">Trepar</string>
+  <string name="lab_factory_sport_type_ropeskipping">Saltar a la comba</string>
   <string name="lab_factory_sport_type_running">Correr</string>
   <string name="lab_factory_sport_type_situp">Abdominales</string>
   <string name="lab_factory_sport_type_skidding">Esquí</string>
