--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="about">Acerca</string>
+  <string name="about">Acerca de</string>
   <string name="about_copyright"></string>
   <string name="accept">Aceptar</string>
   <string name="action_exit">Salir</string>
-  <string name="action_local_ota">Tarjeta SD actualizada</string>
-  <string name="action_pop_about">Acerca</string>
-  <string name="action_pop_lab">Características Lab</string>
+  <string name="action_local_ota">Elija una actualización</string>
+  <string name="action_pop_about">Acerca de</string>
+  <string name="action_pop_lab">Ajustes de Laboratorio</string>
   <string name="action_pop_my_bracelet">Ajustes Mi Band</string>
   <string name="action_pop_person_info">Mi perfil</string>
-  <string name="action_pop_smart_alarms">Alarma</string>
+  <string name="action_pop_smart_alarms">Alarmas</string>
   <string name="action_pop_unlock_screen">Desbloqueo de pantalla</string>
   <string name="action_pop_weixin_enter">Sincronizar con WeChat</string>
   <string name="age">Edad</string>
@@ -21,7 +21,7 @@
   <string name="alarm_repeat">Repetir</string>
   <string name="alarm_repeat_title_format">Seleccionado %s</string>
   <string name="alarm_ring">Alarma</string>
-  <string name="alarm_setting">Ajustes de Alarma</string>
+  <string name="alarm_setting">Ajustes de Alarmas</string>
   <string name="am">AM</string>
   <string name="apk_download_ok">Descarga de la aplicación Mi Band completada.</string>
   <string name="apk_uptodate">En este momento está usando la última versión.</string>
@@ -293,7 +293,7 @@ necesita una red disponible."</string>
   <string name="lab_factory_sport_type_football">Fútbol</string>
   <string name="lab_factory_sport_type_others">Otros</string>
   <string name="lab_factory_sport_type_pingpong">Ping Pong</string>
-  <string name="lab_factory_sport_type_riding">Equitación</string>
+  <string name="lab_factory_sport_type_riding">Ciclismo</string>
   <string name="lab_factory_sport_type_ropeskipping">Saltar a la comba</string>
   <string name="lab_factory_sport_type_running">Correr</string>
   <string name="lab_factory_sport_type_situp">Abdominales</string>
@@ -309,7 +309,7 @@ necesita una red disponible."</string>
   <string name="lab_factory_sport_vote_result_sub_desc">Ha votado por</string>
   <string name="lab_factory_sport_vote_sub_desc">Llegará en la siguiente actualización</string>
   <string name="lab_factory_sport_without_pb_info">&lt;font color=#f57130&gt;%1$s&lt;/font&gt;</string>
-  <string name="lab_factory_title">Características Lab</string>
+  <string name="lab_factory_title">Ajustes de Laboratorio</string>
   <string name="left_hand">Izquierda</string>
   <string name="light_color">Color del LED</string>
   <string name="light_color_title">Color de la luz para indicar el progreso del entrenamiento</string>
