--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -368,11 +368,11 @@ Necesita una red disponible."</string>
   <string name="noti_bracelet_low_battery_content_mid">Necesita recargar su Mi Band.</string>
   <string name="noti_bracelet_low_battery_title">Batería baja</string>
   <string name="noti_bracelet_low_battery_title_low">Mi Band se ha apagado.</string>
-  <string name="notify_status_motor">Mi Band está vibrando.</string>
+  <string name="notify_status_motor">Mi Band está vibrando</string>
   <string name="notify_status_motor_alarm">La alarma está sonando...</string>
   <string name="notify_status_motor_auth">Vinculando Mi Band...</string>
   <string name="notify_status_motor_auth_success">Verificado con éxito.</string>
-  <string name="notify_status_motor_call">Usted tiene una llamada entrante...</string>
+  <string name="notify_status_motor_call"></string>
   <string name="notify_status_motor_disconnect">Desconectando Mi Band...</string>
   <string name="notify_status_motor_goal">¡Ha alcanzado su meta!</string>
   <string name="notify_status_motor_notify">Buscando Mi Band...</string>
@@ -612,8 +612,8 @@ Me gustaría levantarme cuando mi cuerpo ya está despierto.</string>
   <string name="upgrade_tip">Notificación de actualizaciones</string>
   <string name="user_agreement">Declaración de usuario y Política de privacidad</string>
   <string name="user_agreement_prefix">"Para usar este producto, debe aceptar nuestro "</string>
-  <string name="vibrate_notify">Vibrar para las notificaciones</string>
-  <string name="vibrate_notify_tips">Vibrar cuando se recibe una notificación</string>
+  <string name="vibrate_notify">Mostrar notificación</string>
+  <string name="vibrate_notify_tips">Muestra un mensaje al llegar una llamada</string>
   <string name="visit_micom">Visitar el sitio oficial</string>
   <string name="wait">Un momento...</string>
   <string name="walked">Caminado</string>
