Added BETA notifications replies
Since last update, now Xiaomi use Proguard to clear function names so
now its more difficult to patch and follow changes, with this changes
notifications are working again! ;)

PS. Translate for more languages are available and credits to the
translators and feel to free to add ur own language

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -8,6 +8,9 @@
   <string name="action_pop_about">Acerca de</string>
   <string name="action_pop_lab">Ajustes de Laboratorio</string>
   <string name="action_pop_my_bracelet">Ajustes Mi Band</string>
+  <string name="notifications">Notificaciones</string>
+  <string name="insert_number_vibrations">Inserta el numero de vibraciones:</string>
+  <string name="set_notifications_app">Configurar notificaciones</string>
   <string name="action_pop_person_info">Mi perfil</string>
   <string name="action_pop_smart_alarms">Alarmas</string>
   <string name="action_pop_unlock_screen">Desbloqueo de pantalla</string>
