--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,9 @@
   <string name="action_pop_about">About</string>
   <string name="action_pop_lab">Activities</string>
   <string name="action_pop_my_bracelet">Settings</string>
+  <string name="notifications">Notifications</string>
+  <string name="insert_number_vibrations">Insert number of notifications:</string>
+  <string name="set_notifications_app">Configure notifications</string>
   <string name="action_pop_person_info">Profile</string>
   <string name="action_pop_smart_alarms">Alarm</string>
   <string name="action_pop_unlock_screen">Screen Unlock</string>
