Share options for 1.1.762_274
Share options for 1.1.762_274

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -434,7 +434,7 @@ Necesita una red disponible."</string>
   <string name="setting_about_app">"Version de la app:
 Tweaked by dezmen3
 Notifications by mksaint13
-Modded ES KashaMalaga"</string>
+Modded ES KashaMalaga, Daneel_"</string>
   <string name="setting_about_fw">Versión de firmware </string>
   <string name="setting_feedback_address">¿Cómo podemos contactar contigo?</string>
   <string name="setting_feedback_hint">Gracias por su tiempo. Su opinión es importante para nosotros.</string>
