--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -438,7 +438,7 @@ or about 12,000 steps a day for a healthy lifestyle."</string>
   <string name="setting_about_app">"App version:
 Tweaked by dezmen3
 Notifications by mksaint13
-Modded ES KashaMalaga"</string>
+Modded ES KashaMalaga, Daneel_"</string>
   <string name="setting_about_fw">Version </string>
   <string name="setting_feedback_address">Contact info</string>
   <string name="setting_feedback_hint">We love feedback.</string>
